wip(challenge): updating mobile and actions

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@
   --primary: #17171D;
   --background: #E2E2E2;
   --secondary: #EFEFEF;
+  --tertiary: #EAEAEA;
   --border: #D2D2D2;
   --text-primary: #17171D;
   --text-secondary: #5F5F5F;
@@ -71,7 +72,7 @@ h1 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.625rem;
   font-weight: 400;
 }
 
